[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-llm-demo"
version = "0.1.0"
description = "Minimal local A2A demo with calculator and calendar agents."
requires-python = ">=3.10"

[project.scripts]
a2a-calculator = "a2a_calculator_server:main"
a2a-calendar = "a2a_calendar_server:main"
a2a-root-demo = "a2a_root_demo:run_demo"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "a2a_common",
    "a2a_calculator_server",
    "a2a_calendar_server",
    "a2a_root_demo",
    "llm",
]
